--- a/InkTrack Report/InkTrack Report.csproj
+++ b/InkTrack Report/InkTrack Report.csproj
@@ -162,6 +162,7 @@
     </Compile>
     <Compile Include="Classes\PrintoutData.cs" />
     <Compile Include="Classes\ThemeDetector.cs" />
+    <Compile Include="Classes\TrayIcon.cs" />
     <Compile Include="Database\Cabinet.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
@@ -340,6 +341,8 @@
       <DependentUpon>Model.edmx</DependentUpon>
       <LastGenOutput>Model.cs</LastGenOutput>
     </Content>
+    <None Include="Resources\Idle W.ico" />
+    <None Include="Resources\Idle B.ico" />
     <None Include="Resources\DataError B.ico" />
     <None Include="Resources\DataError W.ico" />
     <None Include="Resources\CancelByUser B.ico" />
@@ -349,9 +352,7 @@
     <None Include="Resources\Load B.ico" />
     <None Include="Resources\Load W.ico" />
     <None Include="Resources\Alert B.ico" />
-    <None Include="Resources\Printer W.ico" />
     <None Include="Resources\Alert W.ico" />
-    <None Include="Resources\Printer B.ico" />
     <None Include="Resources\Save B.ico" />
     <None Include="Resources\Save W.ico" />
     <None Include="Resources\Proletarsk.ttf" />
