--- a/InkTrack Report/packages.config
+++ b/InkTrack Report/packages.config
@@ -6,6 +6,7 @@
   <package id="iTextSharp" version="5.5.13.4" targetFramework="net48" />
   <package id="Microsoft.Bcl.Cryptography" version="9.0.5" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="NPetrovichLite" version="1.3.1" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.DirectoryServices" version="9.0.5" targetFramework="net48" />
   <package id="System.DirectoryServices.AccountManagement" version="9.0.5" targetFramework="net48" />
