--- a/InkTrack Report/packages.config
+++ b/InkTrack Report/packages.config
@@ -4,9 +4,10 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net48" />
   <package id="EntityFramework.ru" version="6.2.0" targetFramework="net48" />
   <package id="iTextSharp" version="5.5.13.4" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.Cryptography" version="9.0.5" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
-  <package id="NPetrovichLite" version="1.3.1" targetFramework="net48" />
+  <package id="NPetrovich" version="2.0.1" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.DirectoryServices" version="9.0.5" targetFramework="net48" />
   <package id="System.DirectoryServices.AccountManagement" version="9.0.5" targetFramework="net48" />
@@ -17,5 +18,8 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net48" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="8.0.1" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
