--- a/InkTrack Report/InkTrack Report.csproj
+++ b/InkTrack Report/InkTrack Report.csproj
@@ -183,6 +183,7 @@
     <Compile Include="Classes\Settings.cs" />
     <Compile Include="Classes\ThemeDetector.cs" />
     <Compile Include="Classes\TrayIcon.cs" />
+    <Compile Include="Classes\User.cs" />
     <Compile Include="Database\Cabinet.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
@@ -230,6 +231,9 @@
     </Compile>
     <Compile Include="Windows\Dialog\AdminAuthDialog.xaml.cs">
       <DependentUpon>AdminAuthDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\Dialog\GetEmployeeIdDialog.xaml.cs">
+      <DependentUpon>GetEmployeeIdDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="Windows\Dialog\PageCountDialog.xaml.cs">
       <DependentUpon>PageCountDialog.xaml</DependentUpon>
@@ -285,6 +289,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="Windows\Dialog\AdminAuthDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\Dialog\GetEmployeeIdDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
