--- a/InkTrack Report/App.config
+++ b/InkTrack Report/App.config
@@ -49,4 +49,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-<connectionStrings><add name="LitEntities" connectionString="metadata=res://*/Database.Model.csdl|res://*/Database.Model.ssdl|res://*/Database.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL-SERVER\LIT;initial catalog=Lit;user id=CartridgeTracker;password=CartridgeTracker2025!;encrypt=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<connectionStrings><add name="LitEntities" connectionString="metadata=res://*/Database.Model.csdl|res://*/Database.Model.ssdl|res://*/Database.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HK-PC\SQLEXPRESS;initial catalog=Lit;user id=CartridgeTracker;password=CartridgeTracker2025!;encrypt=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
